public/assets/css/style.css
ul a.submenu-link{
    padding-left: 2rem;
}

.label-bold .form-label
{
    font-weight: bold;
}

.message-toast{
    position: fixed; 
    z-index: 9999999;
    top: 20px; 
    right: 20px;
    box-shadow: none !important;
}

.message-toast .message-body{
    padding: 3px 0px 3px 10px;
}
.back-ground-sidebar a.sidebar-link
{
    background: #35414e;
    font-size: 14px;
    border-top: 0.5px solid;
}

.sidebar-nav .sidebar-item:not(.back-ground-sidebar) + .sidebar-item.back-ground-sidebar a.sidebar-link{
    border-top: none;
}

.field-sheetjs{
    border: 1px solid #c1c4c7;
    height: 80vh;
    width: 100%;
    background-color: #f5f6f7;
}
.select2-container {
    z-index: 9999;
}
div > .select2-container{
    width: 100% !important;
}
span.select2-container {
    z-index:10050;
}

#tree_root
{
    height: calc(100vh - 130px);
}

.sidebar-content.js-simplebar .simplebar-wrapper .simplebar-mask .simplebar-content-wrapper .simplebar-content{
    height: 100vh;
    overflow: auto;
}

.sidebar-content.js-simplebar .simplebar-wrapper .simplebar-mask .simplebar-content-wrapper .simplebar-content::-webkit-scrollbar-track {
    border-radius: 10px;
    background: rgba(0,0,0,0.1);
    border: 1px solid #ccc;
}
.sidebar-content.js-simplebar .simplebar-wrapper .simplebar-mask .simplebar-content-wrapper .simplebar-content::-webkit-scrollbar{
    width: 10px;
    background-color: #F5F5F5;
}

.sidebar-content.js-simplebar .simplebar-wrapper .simplebar-mask .simplebar-content-wrapper .simplebar-content::-webkit-scrollbar-thumb{
    border-radius: 10px;
    background: linear-gradient(left, #fff, #e4e4e4);
    border: 1px solid #aaa;
}

